--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "autoprefixer": "^10.4.23",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   },
   "eslintConfig": {
     "extends": [
